Few fixes with gap

--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,7 @@ img {
 .benefits__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 55px;
+    gap: 55px;
     padding: 0 100px;
 }
 
@@ -698,8 +698,7 @@ img {
 .places__cards {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    gap: 10px;
 }
 
 .places__card {
@@ -774,7 +773,7 @@ img {
 .tours__tour {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 110px;
+    gap: 0 110px;
     align-items: center;
     margin-bottom: 80px;
 }
@@ -818,8 +817,7 @@ img {
 .top__cards {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 60px;
-    grid-row-gap: 60px;
+    gap: 60px;
 }
 
 .top__card-pic {
@@ -968,7 +966,7 @@ img {
     }
     .benefits__cards {
         padding: 0 15px;
-        grid-column-gap: 35px;
+        gap: 0 35px;
     }
     .benefits__card {
         margin-bottom: 50px;
@@ -986,7 +984,7 @@ img {
         grid-column: span 6;
     }
     .tours__tour {
-        grid-column-gap: 40px;
+        gap: 0 40px;
     }
     .tour__title {
         margin-bottom: 30px;
@@ -996,8 +994,7 @@ img {
         padding-left: 0;
     }
     .top__cards {
-        grid-column-gap: 25px;
-        grid-row-gap: 55px;
+        gap: 55px 25px;
     }
     .top__card {
         grid-column: span 3;
